# Projects-management-system

./: README.md  pyproject.toml
.github/workflows/: ci.yml
project_management_system/: hooks.py
project_management_system/fixtures/: workflow.json  workflow_action.json  workflow_state.json
project_management_system/project_management_system/doctype/department/: department.js  department.json  department.py  test_department.py
project_management_system/project_management_system/doctype/institution/: institution.js  institution.json  institution.py  test_institution.py
project_management_system/project_management_system/doctype/issue/: issue.js  issue.json  issue.py  test_issue.py
project_management_system/project_management_system/doctype/issue_category/: issue_category.js  issue_category.json  issue_category.py  test_issue_category.py
project_management_system/project_management_system/doctype/project/: project.js  project.json  project.py  test_project.py
project_management_system/project_management_system/doctype/staff/: staff.js  staff.json  staff.py  test_staff.py
project_management_system/project_management_system/doctype/status/: status.js  status.json  status.py  test_status.py
